fix: scrollbar thin

--- a/public/css/deal.css
+++ b/public/css/deal.css
@@ -1,5 +1,6 @@
 #ListContainer {
     background-color: #EDF0F4;
+    overflow: hidden;
 }
 
 .kanbanView {
