--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Open Sans", sans-serif;
+    scrollbar-width: thin;
+    scrollbar-gutter: stable both-edges;
 }
 
 body {
